# StableHub

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/calendar/application/commands/: archive_calendar_entry.rs  create_calendar_entry.rs  mod.rs  update_calendar_entry.rs
src-tauri/src/modules/calendar/domain/: calendar_entry.rs  calendar_entry_date.rs  calendar_entry_id.rs  calendar_entry_status.rs  calendar_entry_title.rs  calendar_entry_type.rs  errors.rs  mod.rs
src-tauri/src/modules/health/domain/: errors.rs  health_event.rs  health_event_date.rs  health_event_id.rs  health_event_status.rs  health_event_title.rs  health_event_type.rs  horse_reference.rs  mod.rs
src-tauri/src/modules/horse/domain/: errors.rs  horse.rs  horse_id.rs  horse_name.rs  horse_profile.rs  horse_status.rs  mod.rs  sex.rs
src-tauri/src/modules/inventory/application/: mod.rs
src-tauri/src/modules/inventory/domain/: errors.rs  inventory_delivery_cost.rs  inventory_delivery_quantity.rs  inventory_item.rs  inventory_item_id.rs  inventory_item_name.rs  inventory_item_status.rs  inventory_unit.rs  mod.rs  stock_level.rs
src-tauri/src/platform/sqlite/: mod.rs
src-tauri/src/platform/sqlite/migrations/: 0002_create_inventory_items.sql  0003_create_health_events.sql  0004_create_calendar_entries.sql  0005_add_health_event_time.sql  0006_create_inventory_deliveries.sql  0007_add_inventory_usage_and_stocktakes.sql
(+124 files in other folders)
