[package]
name = "stablehub"
version = "0.1.0"
description = "StableHub desktop application"
authors = ["StableHub"]
edition = "2021"

[lib]
name = "stablehub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
